--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,15 @@
 cmake_minimum_required(VERSION 3.7)
 project(showpic VERSION 1.0)
 
-find_package(SDL2 REQUIRED)
-include_directories(showpic ${SDL2_INCLUDE_DIRS})
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
+
 include_directories(inc)
 file(GLOB SOURCES "src/*.cpp")
 
-add_executable(showpic ${SOURCES})
-target_link_libraries(showpic ${SDL2_LIBRARIES})
+find_package(SDL2 REQUIRED)
+include(FindPkgConfig)
+pkg_check_modules(SDL2_Image REQUIRED IMPORTED_TARGET SDL2_image)
+
+add_executable(${PROJECT_NAME} ${SOURCES})
+
+TARGET_LINK_LIBRARIES(${PROJECT_NAME} PkgConfig::SDL2_Image)
